sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:9: error: not found: value k
    echange(k,i)
            ^