sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var av_bleu:Int = 0;
  var en_bleu_blanc:Int = 0;
  var ap_rouge:Int = 0;
  var coul:Int = 0
  for(i <- 1 to getTaille()-1){
    coul = getCouleur(i)
    echange(k,i)
  }
}